# macos-terminal-bootstrap

./: .gitignore  README.md  bootstrap.py  install.sh  pyproject.toml
src/macos_terminal_bootstrap/: __init__.py  cli.py  installer.py
src/macos_terminal_bootstrap/assets/config/: glow-dracula-preview.json  starship.toml  tool-versions
src/macos_terminal_bootstrap/assets/ghostty/: config  typed_scramble.glsl
src/macos_terminal_bootstrap/assets/ghostty/ghostty-shaders/: mnoise.glsl
src/macos_terminal_bootstrap/assets/zsh/: local.zsh  zprofile  zshrc
tests/: test_installer.py
