[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macos-terminal-bootstrap"
version = "0.1.0"
description = "Bootstrap Ramon terminal settings for Ghostty, Zsh, Oh My Zsh, and Starship on a new macOS install."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Ramon Ramos" }]
dependencies = []

[project.scripts]
ramon-terminal-bootstrap = "macos_terminal_bootstrap.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
macos_terminal_bootstrap = [
  "assets/config/*",
  "assets/ghostty/*",
  "assets/ghostty/ghostty-cursor-shaders/*",
  "assets/ghostty/ghostty-shaders/*",
  "assets/zsh/*",
]
